ADD: endpoint to get user information
